# AI-Employee-Silver-Tier

./: .env.example  .gitignore  Business_Goals.md  Company_Handbook.md  Dashboard.md  README.md  email-mcp-server.mjs  email_mcp_server.py  mcp.json  package-lock.json  pyproject.toml  requirements.txt  run_silver.ps1  schedule-end-of-day-summary.json  setup.bat
.claude/skills/: approval-workflow.skill  complete-task.skill  linkedin-post.skill  process-needs-action.skill  send-email.skill  update-dashboard.skill
Needs_Action/: FILE_.md
Skills/: vault_organizer_skill.md
src/: base_watcher.py  gmail_watcher.py  linkedin_poster.py  linkedin_watcher.py  orchestrator.py  plan_generator.py  scheduler.py  whatsapp_watcher.py
