[project]
name = "ai-employee-silver"
version = "0.1.0"
description = "Personal AI Employee - Silver Tier"
requires-python = ">=3.13"
dependencies = [
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
orchestrator = "src.orchestrator:main"
scheduler = "src.scheduler:main"
gmail-watcher = "src.gmail_watcher:main"
whatsapp-watcher = "src.whatsapp_watcher:main"
linkedin-watcher = "src.linkedin_watcher:main"
